--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,13 @@ dependencies:
   flutter:
     sdk: flutter
   
-  http: ^0.12.2
   dio: ^3.0.10
   google_fonts: ^1.1.0
   provider: ^4.3.2+2
+  sqflite: ^1.3.0
+  path: ^1.7.0
+  intl: ^0.16.1
+  flushbar: ^1.10.4
 
 
   # The following adds the Cupertino Icons font to your application.
