--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   path: ^1.7.0
   intl: ^0.16.1
   flushbar: ^1.10.4
+  date_format: ^1.0.9
 
 
   # The following adds the Cupertino Icons font to your application.
