--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,10 @@ dependencies:
   provider: ^4.3.2+2
   sqflite: ^1.3.0
   path: ^1.7.0
-  intl: ^0.16.1
   flushbar: ^1.10.4
   date_format: ^1.0.9
+  email_validator: '^1.0.5'
+  splashscreen: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -59,6 +60,8 @@ flutter:
     - assets/images/bot1.png
     - assets/images/bot2.png
     - assets/images/bot3.png
+    - assets/images/euvsthanos.jpeg
+    - assets/images/euvsthanosrounded.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
